--- a/usuario.html
+++ b/usuario.html
@@ -33,7 +33,7 @@
                 <div class="usuario-img"></div>
                 <p><strong>Nombre:</strong> [Nombre del Usuario]</p>
                 <p><strong>Correo:</strong> [Correo]</p>
-                <button>Cerrar sesión</button>
+                <button Id="cerrarSesion">Cerrar sesión</button>
             </section>
 
             <!-- Información del concierto en triángulo invertido -->
@@ -41,19 +41,19 @@
                 <h2>Conciertos</h2>
                 <div class="conciertos-grid">
                     <div class="concierto">
-                        <a href="ventaentrada.html">
+                        <a>
                             <img src="IMAGENES/evento1.jpg" alt="Concierto 1">
                         </a>
                         <p>Concierto de Rock</p>
                     </div>
                     <div class="concierto">
-                        <a href="ventaentrada.html">
+                        <a>
                             <img src="IMAGENES/evento2.jpg" alt="Concierto 2">
                         </a>
                         <p>Festival de Música Electrónica</p>
                     </div>
                     <div class="concierto">
-                        <a href="ventaentrada.html">
+                        <a>
                             <img src="IMAGENES/evento3.webp" alt="Concierto 3">
                         </a>
                         <p>Concierto de Pop</p>
@@ -68,6 +68,9 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </footer>
+
+    <script src="JAVASCRITP/usuario.js"></script>
+
 </div>
 </body>
 </html>
